2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Application.cs: Added the PersonSync in startup and shutdown
	  of the application
	* Banter/PersonSync.cs: Stubbed out the Start Stop methods to place it
	  in Application

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/Makefile.am: Added PersonSync.cs to project
	* Banter/PersonSync.cs: Created the person sync class.  This class will
	  be in charge of the sync between Telepathy and EDS.

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: refactor code to match the changes in
	  ProviderUserManager

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Added ProviderUsers to Person and code to update
	  them based on EDS properties

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: updated the provider user list when finished
	  connecting
	* Banter/ProviderUser.cs: added a setter on Presence

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUserManager.cs: Added the CreateProviderUser method to
	  create and add a user in one operation

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUserManager.cs: Changed Set to AddProviderUser and
	  made it check for a key and throw an exception if it's there before
	  adding it

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/ProviderUser.cs: added sip

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUser.cs: Added const names for Protocols

2007-05-10  Brady Anderson <banderso@novell.com> 

	* Banter/AccountManagement.cs: Changed start/stop paradigm to just
	  initialize
	* Banter/Application.cs: General cleanup and warning removal

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Presence.cs, Banter/ProviderUserManager.cs,
	  Banter/ProviderUser.cs: Filled out class to give it basic
	  functionality

2007-05-10  Calvin Gaisford <calvinrg@gmail.com> 
