@@ -1,3 +1,10 @@
+2007-05-11  Brady Anderson <banderso@novell.com> 
+
+	* Banter/Account.cs: changes to set the tapioca contact in the provider
+	  user object
+	* Banter/ProviderUser.cs: added internal Contact property; setup events
+	  for presence and alias changing
+
 2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/Application.cs: Added the PersonSync in startup and shutdown
